--- a/playbook_deploy_ECR.yaml
+++ b/playbook_deploy_ECR.yaml
@@ -5,10 +5,10 @@
 
   tasks:
     - name: docker pull image:latest
-      command: docker pull 943775559597.dkr.ecr.eu-central-1.amazonaws.com/task1:latest
+      command: docker pull 943775559597.dkr.ecr.eu-central-1.amazonaws.com/task1:v1
 
     - name: delete previous Container
       command: docker container prune -f
 
     - name: docker run on servers
-      command: docker run -d -p 8096:80 --name task1 943775559597.dkr.ecr.eu-central-1.amazonaws.com/task1:latest
+      command: docker run -d -p 8096:80 --name task1 943775559597.dkr.ecr.eu-central-1.amazonaws.com/task1:v1
