--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
 host_key_checking = false
 inventory = ./hosts.txt
-private_key_file = /home/ubuntu/.ssh/studyinstance.pem
+private_key_file = /home/ubuntu/studyinstance.pem
